--- a/templates/base.html
+++ b/templates/base.html
@@ -140,19 +140,19 @@
             </h6>
             <!-- END MAIL SENDING UNSUCCESSFULL -->
             <div class="form-field-wrapper col-lg-4 col-md-4">
-                <input class="input-md form-full" id="form-name" type="text" name="form-name" placeholder="Ваше Имя" required>
+                <input class="input-md form-full" id="form-name" type="text" name="form-name" placeholder="{% trans "Ваше Имя" %}" required>
             </div>
             <div class="form-field-wrapper col-lg-4 col-md-4">
-                <input class="input-md form-full" id="form-email" type="email" name="form-email" placeholder="Ваш Email" Email required>
+                <input class="input-md form-full" id="form-email" type="email" name="form-email" placeholder="{% trans "Ваш Email" %}" Email required>
             </div>
             <div class="form-field-wrapper col-lg-4 col-md-4">
-                <input class="input-md form-full" id="form-phone" type="text" name="form-phone" placeholder="Ваш Телефон" Phone required>
+                <input class="input-md form-full" id="form-phone" type="text" name="form-phone" placeholder="{% trans "Ваш Телефон" %}" Phone required>
             </div>
             <div class="form-field-wrapper col-lg-12 col-md-12">
-                <input class="input-md form-full" id="form-subject" type="text" name="form-subject" placeholder="Тема письма">
+                <input class="input-md form-full" id="form-subject" type="text" name="form-subject" placeholder="{% trans "Тема письма" %}">
             </div>
             <div class="form-field-wrapper col-lg-12 col-md-12">
-                <textarea class="form-full" id="form-message" rows="7" name="form-message" placeholder="Напишите нам" ></textarea>
+                <textarea class="form-full" id="form-message" rows="7" name="form-message" placeholder="{% trans "Напишите нам" %}" ></textarea>
             </div>
             <div class="text-center">
                 <button  class="btn btn-md btn-black" type="submit" id="form-submit" name="submit">{% trans "Отправить сообщение" %}</button>
@@ -162,7 +162,7 @@
     </div>
 </div>
 <div class="botton " id="top"><img src="{% static 'img/top1.png' %}"/></div>
-<a class="botton" href="#" data-toggle="modal" data-target="#modalhome" id="popup__toggle">
+<!--<a class="botton" href="#" data-toggle="modal" data-target="#modalhome" id="popup__toggle">
     <div class="call-mt visible-xs visible-sm">
         <i class="fa fa-phone fa-2x"></i>
     </div>
@@ -175,7 +175,7 @@
             <div class="img-circleblock" style="transform-origin: center;"></div>
         </div>
     </a>
-</div>
+</div>-->
 <div class="modal fade" id="modalhome" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -274,11 +274,171 @@
         </div>
     </div>
 </footer>
+<script>
+var IPclhrData = {
+
+//Базовые настройки CallHunter
+
+	//временная зона офиса
+	"timeZone": "+2",
+	//учитывать переход на летнее время (1 - да, 0 - нет)
+	"Daylight": "1",
+
+	// начало и конец рабочего дня в часах (если круглосуточно - то одинаковые значения)
+	"workStart": "09",
+	"workEnd": "18",
+
+	//рабочие дни недели офиса - возможные значения через запятую: Mon, Tue, Wed, Thu, Fri, Sat, Sun
+	"workDays": "Mon, Tue, Wed, Thu, Fri",
+
+	//праздничные дни офиса (DD.MM через запятую). строку holiDays можно удалить или закомментировать
+	"holiDays": "31.12, 01.01, 02.01",
+
+	// текст заголовка формы обратной связи
+	"title": "Заказать бесплатный звонок",
+
+	// текст, цвет и размер подзаголовка формы в рабочее время
+	"titleworktime": "Мы перезвоним через 1 мин. 56 сек.",
+//	"titleworktime": "Мы перезвоним через несколько минут",
+	"titleworktimecolor": "red",
+	"titleworktimesize": "14px",
+
+	// текст, цвет и размер подзаголовка формы в нерабочее время 
+	"titlenight": "Мы перезвоним в рабочее время",
+	"titlenightcolor": "black",
+	"titlenightsize": "12px",
+
+	// надпись на кнопке
+	"button": "Жду звонка!",
+
+	//Поля формы обратной связи
+	"fields": "+Введите ваш телефон(+380)*, -Тема звонка(необязательно)",
+
+
+//Расширенные настройки CallHunter
+
+	// Описание расширенных настроек полей fields:
+	// укажите через запятую названия полей формы обратной связи
+	// input: без знаков = + - ? ! - ^ перед именем поля
+	// input для номера телефона: знак + перед именем, после имени в круглых скобках: + и код страны по умолчанию
+	// input для скрытых полей: знак = перед именем, после имени в квадратных скобках значение поля
+	// textarea: ставьте перед названием минус (-)
+	// атрибут placeholder (для полей input или textarea): после имени поля, в круглых скобках указать значение placeholder
+	// атрибут readonly (для полей input или textarea): после имени readonly-поля, в квадратных скобках указать его значение
+	// checkbox: знак вопроса перед именем
+	// select: ставьте перед названием "!" и разделяйте варианты для выбора таким же символом
+	// select для выбора офиса/подразделения: ставьте перед названием "^" и разделяйте варианты для выбора таким же символом, после каждого названия офиса в круглых скобках указать соответствующее значение параметра MMFolder
+	// если поле должно быть обязательно заполнено, после его названия (и атрибута) добавьте *. Например: Введите ваш телефон(+380)*
+	// если ни одно поле не помечено обязательным, то все поля обязательны для заполнения
+
+	// Пример fields с полем типа select - укажите ваши варианты значения поля "Тема звонка" через разделитель "!"
+	//"fields": "+Введите ваш телефон(+380)*, !Тема звонка!-Выбрать-!Узнать наличие!Сделать заказ!Другой вопрос",
+
+	// Пример fields с полем типа select для выбора офиса/подразделения - укажите ваши варианты поля "Выберите офис" через разделитель "^" (название офиса и в скобках - параметр MMFolder)
+	//"fields": "+Введите ваш телефон(+380)*, ^Выберите офис^-Выбрать-^Главный офис^Офис 2(dir2)^Офис 3(dir3), -Тема звонка(необязательно)",
+
+
+	// показывать интерактивную кнопку-иконку обратного звонка? (1 - на всех устройствах, 2 - на стационарных ПК, 3 - на мобильных устройствах и планшетах, 0 - не показывать)
+	"showButton": 	"1",
+	// оформление кнопки (green или gray)
+	"ButtonColor":	"green",
+	// размещение кнопки (справа внизу RightBottom, справа вверху RightTop, слева внизу LeftBottom, слева вверху LeftTop)
+	"ButtonPlace":	"RightBottom",
+	// отступ кнопки по горизонтали от края окна
+	"ButtonX":	"140",
+	// отступ кнопки по вертикали от края окна
+	"ButtonY":	"140",
+	// чувствительность кнопки (когда начинает показываться кнопка, скролл от верхнего края)
+	"ButtonSensitivity":	"0",
+	// отступ кнопки на мобильных телефонах по вертикали от нижнего края окна
+	"ButtonYMobile":	"0",
+
+
+	// включить "охотника" (показать форму обратной связи, когда посетитель покидает сайт или, наоборот, проявляет высокую заинтересованность и активность на сайте) (1 - да, 0 - нет)
+	"hunterOn": "1",
+	// включать "охотника" не больше 1 раза за hunterDays дней одному клиенту (0 никода не использовать, иначе окно будет включаться постоянно на всех страницах)
+	"hunterDays": "30",
+	// дополнительные критерии активности посетителя
+	// включать "охотника" при глубине просмотра не менее hunterPages страниц (0 - отключено)
+	"hunterPages": "5",
+	// включать "охотника" при длительности сессии не менее hunterSesTime сек (0 - отключено)
+	"hunterSesTime": "300",
+	// выключать "охотника" в нерабочее время (1 - да, 0 - нет)
+	"hunterOffNight": "0",
+
+
+	// 0 - разрешить, 1 - запретить повторную отправку сообщений на странице (не действует, если обновил страницу или перешел на другую)
+	// Если совместно используются формы звонков и покупок на одной странице, то 1 будет блокировать запросы покупки после заказа звонка на одной странице (если это важно)
+	"resendStop": "1",
+
+	// закрывать окно формы быстро или ждать отправки сообщения (1 - закрывать сразу, 0 - ждать)
+	"alertQuickclose": "1",
+
+	// сообщение при быстром закрытии окна формы
+	"alertQuickmessage": "Спасибо, сообщение отправлено",
+
+	"alertSending": "Отправка сообщения", // Идет отправка (Сообщение во время ожидания отправки сообщения)
+
+	"alertSetCallTime": "Пожалуйста, укажите время звонка", // Укажите время звонка (Сообщение ошибки, если обязательно нужно указать время звонка в нерабочее время)
+
+	"alertFillRequired": "Заполните обязательные поля", // Заполните обязательные поля (Сообщение ошибки, если не заполнены обязательные поля формы)
+
+	//названия данных в письме или смс (можно закомментировать, если эти данные не требуются)
+	"mailReferrer": "Источник трафика", // откуда пришел посетитель
+	"mailRefLandPage": "Страница входа для источника трафика", // первая страница, куда зашел посетитель
+	"mailUrl": "Страница запроса", // страница, откуда отправлен запрос
+	"mailAttribute": "Атрибут кнопки", // если у кнопки есть атрибут data-clhr, будет передано его значение
+
+
+	// полностью выключать callhunter (охотника и форму обратной связи) в нерабочее время (1 - да, 0 - нет)
+	"nightOff": "0", 
+
+
+	// показывать и заполнять время звонка в нерабочее время (0 - нет, 1 - да но заполнять необязательно, 2 - время звонка заполнять обязательно)
+	"callTime": "1", 
+	"txtCallTime": "Время звонка",
+	"txtFrom": "с",
+	"txtTill": "до",
+	"txtHours": "час.",
+
+
+	//Значение флажка checkbox в формах на сайте
+	"CheckboxYes": "Да", //установлен
+	"CheckboxNo": "Нет", //не установлен
+
+
+	//директория с файлом конфигурации уведомлений мультименеджера (путь от директории с файлом конфигурации охотника) или порядковый номер отдела (от нуля)
+	"MMFolder": "", 
+
+	// служебный идентификатор (реальное значение берется из файла конфигурации уведомлений мультименеджера при его настройке)
+	"tmpid": "1_callhunter", 
+
+	"sendOkMessage": "Спасибо, сообщение отправлено", // ответ на успешную отправку "Спасибо, сообщение отправлено"
+	"sendResendError": "Сообщение уже было отправлено", // ответ на повторную отправку "Сообщение уже было отправлено"
+	"sendError": "Ошибка" // ответ при ошибке "Ошибка"
+
+}
+</script>
+
  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js"></script>
         <!-- Bootstrap bootstrap-touch-slider Slider Main JS File -->
         <script src="{% static 'js/bootstrap-touch-slider.js' %}"></script>
         <script type="text/javascript">
             $('#bootstrap-touch-slider').bsTouchSlider();
         </script>
+<!-- SaleStorm Service -->
+<script type='text/javascript'>
+
+var IPCHFEmail = 'info@cdc.energy';
+/*var intepriceCallHunterFolder='/callhuner/'*/;  
+
+(function(d) { var s = d.createElement('script');
+s.type ='text/javascript'; s.charset = 'utf-8';	s.async = true;
+s.src = 'https://cdn.sale-storm.com/wd/support/support.js?v=702';
+var sc = d.getElementsByTagName('script')[0];
+if (sc) sc.parentNode.insertBefore(s, sc);
+else d.documentElement.firstChild.appendChild(s);
+})(document);</script>
+<!-- End SaleStorm Service -->
 </body>
 </html>
